add conditions for deleting
